Troupe menu layout issues

--- a/public/js/views/menu/troupeMenu.less
+++ b/public/js/views/menu/troupeMenu.less
@@ -203,6 +203,7 @@ body.hover .menu:hover .menu__hotspot {
 
 .menu-list__header__details {
   float: right;
+  line-height: 1.2;
 }
 
 .menu-list__header__details a {
